tests/errors/phpdoc_var_annotation_correct_order.php
<?php

declare(strict_types=1);

/** @var $foo int */
$foo = 2 + 2;
